// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Default Button 1`] = `
<DocumentFragment>
  <button
    class="sc-bgqQcB iScuhT"
    type="button"
  >
     Test Button
  </button>
</DocumentFragment>
`;

exports[`Button Disable Button 1`] = `
<DocumentFragment>
  <button
    class="sc-bgqQcB kJERur"
    type="button"
  >
     Test Button
  </button>
</DocumentFragment>
`;

exports[`Button Loading Button 1`] = `
<DocumentFragment>
  <button
    class="sc-bgqQcB ebQeRa"
    type="button"
  >
    <span
      class="sc-gTRrQi daKBPn"
    />
     Test Button
  </button>
</DocumentFragment>
`;

exports[`Button Small Button 1`] = `
<DocumentFragment>
  <button
    class="sc-bgqQcB eyNniH"
    type="button"
  >
     Test Button
  </button>
</DocumentFragment>
`;
